--- a/IntroducaoAngular8/src/app/courses/course-info.component.html
+++ b/IntroducaoAngular8/src/app/courses/course-info.component.html
@@ -1,1 +1,29 @@
-<h2>Course id = {{courseId}}</h2>
+<h2>Course Info</h2>
+
+<hr/>
+
+<form #courseForm="ngForm">
+    <div class="form-group row">
+        <label class="col-sm-2 col-form-label">Name</label>
+    
+        <div class="col-sm-10">
+            <input [(ngModel)]="course.name" required name="name" #courseName="ngModel" [ngClass]="{'is-invalid': courseName.invalid}" class="form-control">
+
+            <div class="invalid-feedback">
+                <span>Course Name Is Required</span>
+            </div>
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <label class="col-sm-2 col-form-label">Price</label>
+    
+        <div class="col-sm-10">
+            <input [(ngModel)]="course.price" required name="price" #coursePrice="ngModel" [ngClass]="{'is-invalid': coursePrice.invalid}" class="form-control">
+
+            <div class="invalid-feedback">
+                <span>Course Price Is Required</span>
+            </div>
+        </div>
+    </div>
+</form>
