--- a/Angular8-FlexLayout/GenericWebStartup/src/app/app.component.html
+++ b/Angular8-FlexLayout/GenericWebStartup/src/app/app.component.html
@@ -13,9 +13,39 @@
         <div
             fxFlex="70">
 
-            <mat-form-field>
-                <input type="text" placeholder="Select Location">
+            <mat-form-field
+                class="material-input-full-width">
+                <input type="text" placeholder="Select Location" aria-label="Number"
+                    [matAutocomplete]="auto">
+                <mat-autocomplete #auto="matAutocomplete">
+                    <mat-option *ngFor="let option of options" [value]="option">
+                        {{option}}
+                    </mat-option>
+                </mat-autocomplete>
             </mat-form-field>
+
+            <mat-form-field
+                class="material-input-full-width">
+                <input matInput placeholder="Search items." value="">
+            </mat-form-field>
+        </div>
+
+        <div
+            fxLayout="row"
+            fxFlex="15"
+            fxLayoutAlign="end center">
+
+            <button mat-icon-button aria-label="Button with a search icon">
+                <mat-icon class="toolbar-icon">Search</mat-icon>
+            </button>
+
+            <button
+                mat-icon-button
+                matBadge="9"
+                matBadgeColor="warn"
+                [matMenuTriggerFor]="menu">
+                <mat-icon class="toolbar-icon">notifications</mat-icon>
+            </button>
 
         </div>
 
