--- a/Angular8-FlexLayout/GenericWebStartup/src/app/app.component.html
+++ b/Angular8-FlexLayout/GenericWebStartup/src/app/app.component.html
@@ -1,21 +1,17 @@
-<div
-    fxLayout="column">
-    <!-- column: stacking ur children verticaly -->
+<div fxLayout="column">
+    <!-- column: stacking ur children vertically -->
 
-    <div
-        fxLayout="row">
+    <div fxLayoutGap="2%" fxFlex="auto" fxLayoutAlign="space-between center" fxLayout="row"
+        class="main-toolbar-wrapper p-3">
 
-        <div fxFlex="10"
-            class="branding">
+        <div fxFlex="10" class="branding pl-2">
             <h3>B</h3>
         </div>
 
-        <div
-            fxFlex="70">
+        <div fxFlex="70" fxLayoutAlign="space-around center" fxLayoutGap="2%" fxHide.xs #searchFields>
 
-            <mat-form-field
-                class="material-input-full-width">
-                <input type="text" placeholder="Select Location" aria-label="Number"
+            <mat-form-field *ngIf="searchFields.style.display !== 'none'" class="material-input-full-width">
+                <input type="text" placeholder="Select Location" aria-label="Number" matInput [formControl]="myControl"
                     [matAutocomplete]="auto">
                 <mat-autocomplete #auto="matAutocomplete">
                     <mat-option *ngFor="let option of options" [value]="option">
@@ -24,28 +20,50 @@
                 </mat-autocomplete>
             </mat-form-field>
 
-            <mat-form-field
-                class="material-input-full-width">
+            <mat-form-field *ngIf="searchFields.style.display !== 'none'" class="material-input-full-width">
                 <input matInput placeholder="Search items." value="">
             </mat-form-field>
         </div>
 
-        <div
-            fxLayout="row"
-            fxFlex="15"
-            fxLayoutAlign="end center">
+        <div fxLayout="row" fxFlex="15" fxLayoutAlign="end center">
 
-            <button mat-icon-button aria-label="Button with a search icon">
-                <mat-icon class="toolbar-icon">Search</mat-icon>
+            <button mat-icon-button aria-label="Button with a search icon"
+                (click)="searchItems(searchFields.style.display)">
+                <mat-icon class="toolbar-icon">search</mat-icon>
             </button>
 
-            <button
-                mat-icon-button
-                matBadge="9"
-                matBadgeColor="warn"
-                [matMenuTriggerFor]="menu">
+            <button mat-icon-button matBadge="8" matBadgeColor="warn" [matMenuTriggerFor]="menu">
                 <mat-icon class="toolbar-icon">notifications</mat-icon>
             </button>
+ 
+            <mat-menu #menu="matMenu">
+                <mat-card class="example-card">
+                    <mat-card-header>
+                        <div mat-card-avatar class="example-header-image"></div>
+                        <mat-card-title>Shiba Inu</mat-card-title>
+                        <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+                    </mat-card-header>
+                    <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg"
+                        alt="Photo of a Shiba Inu">
+                    <mat-card-content>
+                        <p>
+                            The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from
+                            Japan.
+                            A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was
+                            originally
+                            bred for hunting.
+                        </p>
+                    </mat-card-content>
+                    <mat-card-actions>
+                        <button mat-button>LIKE</button>
+                        <button mat-button>SHARE</button>
+                    </mat-card-actions>
+                </mat-card>
+            </mat-menu>
+
+            <div class="pl-3">
+                <div class="mat-card-avatar avatar"></div>
+            </div>
 
         </div>
 
