--- a/Angular8-FlexLayout/GenericWebStartup/src/styles.scss
+++ b/Angular8-FlexLayout/GenericWebStartup/src/styles.scss
@@ -2,3 +2,17 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+$mat-card-header-size: 40px !default;
+.mat-card-avatar {
+    height: $mat-card-header-size;
+    width: $mat-card-header-size;
+    border-radius: 50%;
+    flex-shrink: 0;
+    object-fit: cover;
+    background: #000;
+}
+
+.material-input-full-width{
+    width: 100%;
+}
