--- a/Angular8-FlexLayout/Angular-8-FxLayout-Sample/src/app/core/header/header.component.html
+++ b/Angular8-FlexLayout/Angular-8-FxLayout-Sample/src/app/core/header/header.component.html
@@ -35,7 +35,7 @@
             <button mat-icon-button matBadge="8" matBadgeColor="warn" [matMenuTriggerFor]="menu">
                 <mat-icon class="toolbar-icon">notifications</mat-icon>
             </button>
- 
+
             <mat-menu #menu="matMenu">
                 <mat-card class="example-card">
                     <mat-card-header>
@@ -66,12 +66,33 @@
             </div>
 
         </div>
-
     </div>
 
-    <div
-    fxLayout="row">
+    <!-- Only show on mobile version -->
+    <div fxLayout="row" *ngIf="searchFields.style.display === 'none' && showSearchPane">
+        <div id="searchPane" class="full-width p-2">
+            <div class="full-width">
+                <mat-form-field class="material-input-full-width">
+                    <input type="text" placeholder="Select Location" aria-label="Number" matInput
+                        [formControl]="myControl" [matAutocomplete]="auto">
+                    <mat-autocomplete #auto="matAutocomplete">
+                        <mat-option *ngFor="let option of options" [value]="option">
+                            {{option}}
+                        </mat-option>
+                    </mat-autocomplete>
+                </mat-form-field>
+            </div>
+
+            <div>
+                <mat-form-field class="material-input-full-width">
+                    <input matInput placeholder="Search items." value="">
+                </mat-form-field>
+            </div>
+
+            <div>
+                <button mat-stroked-button color="primary" (click)="doSearch()">Search</button>
+            </div>
+        </div>
 
     </div>
-    
 </div>
