--- a/Projects/BookStore/bookstore-front/src/app/components/template/header/header.component.css
+++ b/Projects/BookStore/bookstore-front/src/app/components/template/header/header.component.css
@@ -5,6 +5,7 @@ img {
 .header {
     justify-content: center;
     height: 10%;
+    background-color: black;
 }
 
 span {
@@ -15,4 +16,5 @@ span {
 h1 {
     padding-left: 1.2rem;
     font-size: 1.5rem;
+    color: white;
 }
