--- a/Projects/BookStore/bookstore-front/src/app/components/views/categoria/categoria-read/categoria-read.component.css
+++ b/Projects/BookStore/bookstore-front/src/app/components/views/categoria/categoria-read/categoria-read.component.css
@@ -1,6 +1,9 @@
 .content {
     width: 90%;
     margin: 1.4rem, auto auto auto;
+    display: flex;
+    flex-direction: column;
+    
 }
 
 .title {
@@ -14,7 +17,12 @@
     font-weight: 500;
 }
 
+/* .content-table {
+    width: 90%;
+    margin: auto;
+} */
+
 .table {
     width: 100%;
-    
+    margin: 0 auto;
 }
