--- a/Projects/BookStore/bookstore-front/src/app/components/views/categoria/categoria-read/categoria-read.component.html
+++ b/Projects/BookStore/bookstore-front/src/app/components/views/categoria/categoria-read/categoria-read.component.html
@@ -4,7 +4,7 @@
     </div>
 
     <div class="mat-elevation-z8 content-table">
-        <table class="table" mat-table >
+        <table class="table" mat-table [dataSource]="categorias">
 
             <ng-container matColumnDef="id">
               <th mat-header-cell *matHeaderCellDef> ID </th>
@@ -26,7 +26,7 @@
             <!-- Symbol Column -->
             <ng-container matColumnDef="acoes">
               <th mat-header-cell *matHeaderCellDef> Ações </th>
-              <td mat-cell *matCellDef="let row"> {{row.acoes}} </td>
+              <td mat-cell *matCellDef="let row"></td>
             </ng-container>
           
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
