Justify component read

--- a/Projects/BookStore/bookstore-front/src/app/components/views/categoria/categoria-read/categoria-read.component.css
+++ b/Projects/BookStore/bookstore-front/src/app/components/views/categoria/categoria-read/categoria-read.component.css
@@ -1,9 +1,6 @@
 .content {
     width: 90%;
-    margin: 1.4rem, auto auto auto;
-    display: flex;
-    flex-direction: column;
-    
+    margin: 1.4rem auto auto auto;
 }
 
 .title {
@@ -17,12 +14,28 @@
     font-weight: 500;
 }
 
-/* .content-table {
-    width: 90%;
-    margin: auto;
-} */
+button {
+    margin-bottom: .8rem;
+}
 
 .table {
     width: 100%;
-    margin: 0 auto;
+}
+
+.livros {
+    color:rgb(37,125, 240);
+    margin-left: .6rem;
+}
+
+.edit {
+    color: rgb(216, 173, 24);
+}
+
+.delete {
+    color: rgb(228, 56, 56);
+    margin-left: .5rem;
+}
+
+.mat-header{
+    width: 5rem;
 }
