--- a/Projects/BookStore/bookstore-front/src/app/components/views/categoria/categoria-read/categoria-read.component.html
+++ b/Projects/BookStore/bookstore-front/src/app/components/views/categoria/categoria-read/categoria-read.component.html
@@ -3,6 +3,10 @@
         <h1>Categoria</h1>
     </div>
 
+    <button mat-stroked-button color="accent" class="mat-elevation-z8">
+      Nova Categoria
+    </button>
+
     <div class="mat-elevation-z8 content-table">
         <table class="table" mat-table [dataSource]="categorias">
 
@@ -22,11 +26,29 @@
               <th mat-header-cell *matHeaderCellDef> Descrição </th>
               <td mat-cell *matCellDef="let row"> {{row.descricao}} </td>
             </ng-container>
+
+            <ng-container matColumnDef="livros">
+              <th mat-header-cell *matHeaderCellDef> Livros </th>
+              <td mat-cell *matCellDef="let row"> 
+                <a class="livros" href="#">
+                  <i class="material-icons">
+                    book
+                  </i>
+                </a>
+              </td>
+            </ng-container>
           
             <!-- Symbol Column -->
             <ng-container matColumnDef="acoes">
-              <th mat-header-cell *matHeaderCellDef> Ações </th>
-              <td mat-cell *matCellDef="let row"></td>
+              <th class="mat-header" mat-header-cell *matHeaderCellDef> Ações </th>
+              <td mat-cell *matCellDef="let row">
+                <a class="edit" href="">
+                  <i class="material-icons">edit</i>
+                </a>
+                <a class="delete" href="">
+                  <i class="material-icons">delete</i>
+                </a>
+              </td>
             </ng-container>
           
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
