--- a/Projects/BookStore/bookstore-front/src/app/components/views/categoria/categoria-read/categoria-read.component.html
+++ b/Projects/BookStore/bookstore-front/src/app/components/views/categoria/categoria-read/categoria-read.component.html
@@ -3,7 +3,7 @@
         <h1>Categoria</h1>
     </div>
 
-    <button mat-stroked-button color="accent" class="mat-elevation-z8">
+    <button (click)="navegarParaCategoriaCreate()" mat-stroked-button color="accent" class="mat-elevation-z8">
       Nova Categoria
     </button>
 
