--- a/Projects/BookStore/bookstore-front/src/app/components/views/categoria/categoria-create/categoria-create.component.html
+++ b/Projects/BookStore/bookstore-front/src/app/components/views/categoria/categoria-create/categoria-create.component.html
@@ -3,16 +3,16 @@
 
     <mat-form-field class="form">
         <mat-label>Nome</mat-label>
-        <input matInput type="text" name="nome" id="nome" placeholder="Ex: Computação">
+        <input matInput [(ngModel)]="categoria.nome" type="text" name="nome" id="nome" placeholder="Ex: Computação">
     </mat-form-field>
 
     <mat-form-field class="form">
         <mat-label>Descrição</mat-label>
-        <textarea matInput type="text" name="descricao" placeholder="Ex: Livro de Computação"></textarea>
+        <textarea matInput [(ngModel)]="categoria.descricao" type="text" name="descricao" placeholder="Ex: Livro de Computação"></textarea>
     </mat-form-field>
 
     <div class="button">
-        <button mat-stroked-button color="primary" class="mat-elevation-z8">
+        <button (click)="create()" mat-stroked-button color="primary" class="mat-elevation-z8">
             Criar
         </button>
 
