Button cancell in create categories

--- a/Projects/BookStore/bookstore-front/src/app/components/views/categoria/categoria-create/categoria-create.component.html
+++ b/Projects/BookStore/bookstore-front/src/app/components/views/categoria/categoria-create/categoria-create.component.html
@@ -16,7 +16,7 @@
             Criar
         </button>
 
-        <button mat-stroked-button color="warn" class="mat-elevation-z8">
+        <button (click)="cancel()" mat-stroked-button color="warn" class="mat-elevation-z8">
             Cancelar
         </button>
     </div>
