--- a/Angular9/crud/frontend/src/app/components/template/footer/footer.component.html
+++ b/Angular9/crud/frontend/src/app/components/template/footer/footer.component.html
@@ -4,6 +4,6 @@
         <i class="material-icons red v-middle" appRed>
             favorite
         </i>
-        por <strong><span class="red">OWL</span> Systens</strong>
+        por <strong><span class="red">Felipe</span> D. Santos</strong>
     </span>
 </mat-toolbar>
