--- a/Projects/BookStore/bookstore-front/src/app/components/views/categoria/categoria-delete/categoria-delete.component.html
+++ b/Projects/BookStore/bookstore-front/src/app/components/views/categoria/categoria-delete/categoria-delete.component.html
@@ -3,12 +3,12 @@
 
     <mat-form-field class="form">
         <mat-label>Nome</mat-label>
-        <input matInput type="text" name="nome" id="nome" disabled>
+        <input matInput [(ngModel)]="categoria.nome" type="text" name="nome" id="nome" disabled>
     </mat-form-field>
 
     <mat-form-field class="form">
         <mat-label>Descrição</mat-label>
-        <textarea matInput type="text" name="descricao" disabled></textarea>
+        <textarea matInput [(ngModel)]="categoria.descricao" type="text" name="descricao" disabled></textarea>
     </mat-form-field>
 
     <div class="button">
