--- a/Projects/BookStore/bookstore-front/src/app/components/views/categoria/categoria-delete/categoria-delete.component.html
+++ b/Projects/BookStore/bookstore-front/src/app/components/views/categoria/categoria-delete/categoria-delete.component.html
@@ -12,11 +12,11 @@
     </mat-form-field>
 
     <div class="button">
-        <button  mat-stroked-button color="primary" class="mat-elevation-z8">
+        <button (click)="delete()" mat-stroked-button color="primary" class="mat-elevation-z8">
             Deletar
         </button>
 
-        <button mat-stroked-button color="warn" class="mat-elevation-z8">
+        <button (click)="cancel()" mat-stroked-button color="warn" class="mat-elevation-z8">
             Cancelar
         </button>
     </div>
