--- a/Projects/BookStore/bookstore-front/src/app/components/views/categoria/categoria-update/categoria-update.component.html
+++ b/Projects/BookStore/bookstore-front/src/app/components/views/categoria/categoria-update/categoria-update.component.html
@@ -1,22 +1,22 @@
 <form>
-    <h1 class="mat-elevation-z8">Editar Categoria</h1>
+    <h1 class="mat-elevation-z8">Atualizando Categoria</h1>
 
     <mat-form-field class="form">
         <mat-label>Nome</mat-label>
-        <input matInput type="text" name="nome" id="nome" placeholder="Ex: Computação">
+        <input matInput [(ngModel)]="categoria.nome" type="text" name="nome" id="nome" placeholder="Ex: Computação">
     </mat-form-field>
 
     <mat-form-field class="form">
         <mat-label>Descrição</mat-label>
-        <textarea matInput type="text" name="descricao" placeholder="Ex: Livro de Computação"></textarea>
+        <textarea matInput [(ngModel)]="categoria.descricao" type="text" name="descricao" placeholder="Ex: Livro de Computação"></textarea>
     </mat-form-field>
 
     <div class="button">
-        <button mat-stroked-button color="primary" class="mat-elevation-z8">
-            Criar
+        <button (click)="update()" mat-stroked-button color="primary" class="mat-elevation-z8">
+            Atualizar
         </button>
 
-        <button mat-stroked-button color="warn" class="mat-elevation-z8">
+        <button (click)="cancel()" mat-stroked-button color="warn" class="mat-elevation-z8">
             Cancelar
         </button>
     </div>
