Read Books For Categories

--- a/Projects/BookStore/bookstore-front/src/app/components/views/livro/livro-read-all/livro-read-all.component.html
+++ b/Projects/BookStore/bookstore-front/src/app/components/views/livro/livro-read-all/livro-read-all.component.html
@@ -8,7 +8,7 @@
     </button>
 
     <div class="mat-elevation-z8 content-table">
-        <table class="table" mat-table>
+        <table class="table" mat-table [dataSource]="livros">
 
             <ng-container matColumnDef="id">
               <th mat-header-cell *matHeaderCellDef> ID </th>
