--- a/Projects/BookStore/bookstore-front/src/app/components/views/livro/livro-create/livro-create.component.html
+++ b/Projects/BookStore/bookstore-front/src/app/components/views/livro/livro-create/livro-create.component.html
@@ -3,21 +3,24 @@
 
     <mat-form-field class="form">
         <mat-label>Titulo</mat-label>
-        <input matInput type="text" name="titulo" placeholder="Ex: SOLID" maxlength="100">
+        <input matInput [formControl]="titulo" required type="text" name="titulo" placeholder="Ex: SOLID" maxlength="100">
+        <mat-error *ngIf="titulo.invalid">{{ getMessage() }}</mat-error>
     </mat-form-field>
 
     <mat-form-field class="form">
         <mat-label>Nome do Autor</mat-label>
-        <input matInput type="text" name="nome_autor" placeholder="Ex: Robert C. Martin " maxlength="100">
+        <input matInput [formControl]="nome_autor" required type="text" name="nome_autor" placeholder="Ex: Robert C. Martin " maxlength="100">
+        <mat-error *ngIf="nome_autor.invalid">{{ getMessage() }}</mat-error>
     </mat-form-field>
 
     <mat-form-field class="form">
         <mat-label>Texto</mat-label>
-        <textarea matInput type="text" name="texto" placeholder="Ex: Lorem ipsum" maxlength="2000000" ></textarea>
+        <textarea matInput [formControl]="texto" required type="text" name="texto" placeholder="Ex: Lorem ipsum" maxlength="2000000" ></textarea>
+        <mat-error *ngIf="texto.invalid">{{ getMessage() }}</mat-error>
     </mat-form-field>
 
     <div class="button">
-        <button mat-stroked-button color="primary" class="mat-elevation-z8">
+        <button [disabled]="getMessage()" mat-stroked-button color="primary" class="mat-elevation-z8">
             Criar
         </button>
 
