--- a/Projects/BookStore/bookstore-front/src/app/components/views/livro/livro-create/livro-create.component.html
+++ b/Projects/BookStore/bookstore-front/src/app/components/views/livro/livro-create/livro-create.component.html
@@ -3,28 +3,28 @@
 
     <mat-form-field class="form">
         <mat-label>Titulo</mat-label>
-        <input matInput [formControl]="titulo" required type="text" name="titulo" placeholder="Ex: SOLID" maxlength="100">
+        <input matInput [(ngModel)]="livro.titulo" [formControl]="titulo" required type="text" name="titulo" placeholder="Ex: SOLID" maxlength="100">
         <mat-error *ngIf="titulo.invalid">{{ getMessage() }}</mat-error>
     </mat-form-field>
 
     <mat-form-field class="form">
         <mat-label>Nome do Autor</mat-label>
-        <input matInput [formControl]="nome_autor" required type="text" name="nome_autor" placeholder="Ex: Robert C. Martin " maxlength="100">
-        <mat-error *ngIf="nome_autor.invalid">{{ getMessage() }}</mat-error>
+        <input matInput [(ngModel)]="livro.nomeAutor" [formControl]="nomeAutor" required type="text" name="nomeAutor" placeholder="Ex: Robert C. Martin " maxlength="100">
+        <mat-error *ngIf="nomeAutor.invalid">{{ getMessage() }}</mat-error>
     </mat-form-field>
 
     <mat-form-field class="form">
         <mat-label>Texto</mat-label>
-        <textarea matInput [formControl]="texto" required type="text" name="texto" placeholder="Ex: Lorem ipsum" maxlength="2000000" ></textarea>
+        <textarea matInput [(ngModel)]="livro.texto" [formControl]="texto" required type="text" name="texto" placeholder="Ex: Lorem ipsum" maxlength="2000000" ></textarea>
         <mat-error *ngIf="texto.invalid">{{ getMessage() }}</mat-error>
     </mat-form-field>
 
     <div class="button">
-        <button [disabled]="getMessage()" mat-stroked-button color="primary" class="mat-elevation-z8">
+        <button (click)="create()" [disabled]="getMessage()" mat-stroked-button color="primary" class="mat-elevation-z8">
             Criar
         </button>
 
-        <button mat-stroked-button color="warn" class="mat-elevation-z8">
+        <button (click)="cancel()" mat-stroked-button color="warn" class="mat-elevation-z8">
             Cancelar
         </button>
     </div>
