Method update for livro

--- a/Projects/BookStore/bookstore-front/src/app/components/views/livro/livro-update/livro-update.component.html
+++ b/Projects/BookStore/bookstore-front/src/app/components/views/livro/livro-update/livro-update.component.html
@@ -20,7 +20,7 @@
     </mat-form-field>
 
     <div class="button">
-        <button [disabled]="getMessage()" mat-stroked-button color="primary" class="mat-elevation-z8">
+        <button (click)="update()" [disabled]="getMessage()" mat-stroked-button color="primary" class="mat-elevation-z8">
             Atualizar
         </button>
 
