--- a/Projects/BookStore/bookstore-front/src/app/components/views/livro/livro-read-all/livro-read-all.component.html
+++ b/Projects/BookStore/bookstore-front/src/app/components/views/livro/livro-read-all/livro-read-all.component.html
@@ -24,7 +24,7 @@
             <ng-container matColumnDef="livros">
               <th mat-header-cell *matHeaderCellDef> Ler Livro </th>
               <td mat-cell *matCellDef="let row"> 
-                <a class="livros">
+                <a class="livros" routerLink="{{ row.id }}/read">
                   <i class="material-icons">
                     book
                   </i>
