--- a/Reviews/Angular8/angular190822/src/app/data-binding/data-binding.component.html
+++ b/Reviews/Angular8/angular190822/src/app/data-binding/data-binding.component.html
@@ -1,3 +1,4 @@
 <p>data-binding works!</p>
-<input type="text" (input)="obterNumero($event.target.value)"/>
-<h1>{{ numero }}</h1>
+<input #data
+  type="number" (input)="obterNumero(data.value)"/>
+<h1>{{ text }}</h1>
