--- a/Curses/TecnicasAvancadasAngular8/curso-angular-estrutura-inicial/src/app/filmes/cadastro-filmes/cadastro-filmes.component.html
+++ b/Curses/TecnicasAvancadasAngular8/curso-angular-estrutura-inicial/src/app/filmes/cadastro-filmes/cadastro-filmes.component.html
@@ -3,40 +3,55 @@
   <mat-card class="center width50">
     <form [formGroup]="cadastro" (ngSubmit)="salvar()" (ngReset)="reiniciarForm()">
       <mat-card-content>
-          <mat-form-field class="full-width">
-            <input matInput placeholder="Título" name="titulo" formControlName="titulo">
-          </mat-form-field>
-          <mat-form-field class="full-width">
-            <input matInput placeholder="Link Foto" name="urlFoto" formControlName="urlFoto">
-          </mat-form-field>
-          <mat-form-field class="full-width">
-              <input matInput [matDatepicker]="picker" placeholder="Data de Lançamento" name="dtLancamento" formControlName="dtLancamento">
-              <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-              <mat-datepicker #picker></mat-datepicker>
-            </mat-form-field>
-          <mat-form-field class="full-width">
-            <textarea matInput placeholder="Descrição" name="descricao" formControlName="descricao"></textarea>
-          </mat-form-field>
-          <mat-form-field class="full-width">
-            <input matInput placeholder="Nota IMDb" type="number" min="0" max="10" step="0.1"  name="nota" formControlName="nota">
-          </mat-form-field>
-          <mat-form-field class="full-width">
-            <input matInput placeholder="Link IMDb" name="urlIMDB" formControlName="urlIMDB">
-          </mat-form-field>
-          <mat-form-field class="full-width">
-            <mat-select placeholder="Gênero" formControlName="genero">
-              <mat-option value="Ação">Açao</mat-option>
-              <mat-option value="Aventura">Aventura</mat-option>
-              <mat-option value=">Ficção Científica">Ficção Científica</mat-option>
-              <mat-option value="Romance">Romance</mat-option>
-              <mat-option value="Terror">Terror</mat-option>
-            </mat-select>
-          </mat-form-field>
-        </mat-card-content>
-        <mat-card-actions>
-          <button type="submit" color="accent" mat-raised-button>Salvar</button>
-          <button type="reset" color="warn" mat-raised-button>Cancelar</button>
-        </mat-card-actions>
-      </form>   
+        <mat-form-field class="full-width">
+          <input matInput placeholder="Título *" name="titulo" formControlName="titulo">
+          <mat-error *ngIf="(cadastro.touched || cadastro.dirty) && f.titulo.errors && f.titulo.errors.required">Campo Obrigatório!</mat-error>
+          <mat-error *ngIf="(cadastro.touched || cadastro.dirty) && f.titulo.errors && f.titulo.errors.minlength">O Campo precisa ter no minimo 2 caracteres!</mat-error>
+          <mat-error *ngIf="(cadastro.touched || cadastro.dirty) && f.titulo.errors && f.titulo.errors.maxlength">O Campo pode ter no maximo 256 caracteres!</mat-error>
+        </mat-form-field>
+        <mat-form-field class="full-width">
+          <input matInput placeholder="Link Foto" name="urlFoto" formControlName="urlFoto">
+          <mat-error *ngIf="(cadastro.touched || cadastro.dirty) && f.urlFoto.errors && f.urlFoto.errors.minlength">O Campo precisa ter no minimo 10 caracteres!</mat-error>
+        </mat-form-field>
+        <mat-form-field class="full-width">
+          <input matInput
+            readonly
+            [matDatepicker]="picker" placeholder="Data de Lançamento *" name="dtLancamento"
+            formControlName="dtLancamento"
+            (click)="picker.open()">
+            <mat-error *ngIf="(cadastro.touched || cadastro.dirty) && f.dtLancamento.errors && f.dtLancamento.errors.required">Campo Obrigatório!</mat-error>
+          <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+          <mat-datepicker #picker></mat-datepicker>
+        </mat-form-field>
+        <mat-form-field class="full-width">
+          <textarea matInput placeholder="Descrição" name="descricao" formControlName="descricao"></textarea>
+        </mat-form-field>
+        <mat-form-field class="full-width">
+          <input matInput placeholder="Nota IMDb *" type="number" min="0" max="10" step="0.1" name="nota"
+            formControlName="nota">
+          <mat-error *ngIf="(cadastro.touched || cadastro.dirty) && f.nota.errors && f.nota.errors.required">Campo Obrigatório!</mat-error>
+          <mat-error *ngIf="(cadastro.touched || cadastro.dirty) && f.nota.errors && f.nota.errors.min">O Campo precisa ter no minimo o valor 0!</mat-error>
+          <mat-error *ngIf="(cadastro.touched || cadastro.dirty) && f.nota.errors && f.nota.errors.max">O Campo pode ter no maximo o valor 10!</mat-error>
+        </mat-form-field>
+        <mat-form-field class="full-width">
+          <input matInput placeholder="Link IMDb" name="urlIMDB" formControlName="urlIMDB">
+          <mat-error *ngIf="(cadastro.touched || cadastro.dirty) && f.urlIMDB.errors && f.urlIMDB.errors.minlength">O Campo precisa ter no minimo 10 caracteres!</mat-error>
+        </mat-form-field>
+        <mat-form-field class="full-width">
+          <mat-select placeholder="Gênero *" formControlName="genero">
+            <mat-option value="Ação">Açao</mat-option>
+            <mat-option value="Aventura">Aventura</mat-option>
+            <mat-option value=">Ficção Científica">Ficção Científica</mat-option>
+            <mat-option value="Romance">Romance</mat-option>
+            <mat-option value="Terror">Terror</mat-option>
+          </mat-select>
+          <mat-error *ngIf="(cadastro.touched || cadastro.dirty) && f.genero.errors && f.genero.errors.required">Campo Obrigatório!</mat-error>
+        </mat-form-field>
+      </mat-card-content>
+      <mat-card-actions>
+        <button type="submit" color="accent" mat-raised-button>Salvar</button>
+        <button type="reset" color="warn" mat-raised-button>Cancelar</button>
+      </mat-card-actions>
+    </form>
   </mat-card>
 </div>
