--- a/Curses/TecnicasAvancadasAngular8/curso-angular-estrutura-inicial/src/app/filmes/cadastro-filmes/cadastro-filmes.component.html
+++ b/Curses/TecnicasAvancadasAngular8/curso-angular-estrutura-inicial/src/app/filmes/cadastro-filmes/cadastro-filmes.component.html
@@ -5,13 +5,13 @@
       <mat-card-content>
         <mat-form-field class="full-width">
           <input matInput placeholder="Título *" name="titulo" formControlName="titulo">
-          <mat-error *ngIf="(cadastro.touched || cadastro.dirty) && f.titulo.errors && f.titulo.errors.required">Campo Obrigatório!</mat-error>
-          <mat-error *ngIf="(cadastro.touched || cadastro.dirty) && f.titulo.errors && f.titulo.errors.minlength">O Campo precisa ter no minimo 2 caracteres!</mat-error>
-          <mat-error *ngIf="(cadastro.touched || cadastro.dirty) && f.titulo.errors && f.titulo.errors.maxlength">O Campo pode ter no maximo 256 caracteres!</mat-error>
+          <mat-error *ngIf="(cadastro.touched || cadastro.dirty) && f.titulo.errors?.required">Campo Obrigatório!</mat-error>
+          <mat-error *ngIf="(cadastro.touched || cadastro.dirty) && f.titulo.errors?.minlength">O Campo precisa ter no minimo 2 caracteres!</mat-error>
+          <mat-error *ngIf="(cadastro.touched || cadastro.dirty) && f.titulo.errors?.maxlength">O Campo pode ter no maximo 256 caracteres!</mat-error>
         </mat-form-field>
         <mat-form-field class="full-width">
           <input matInput placeholder="Link Foto" name="urlFoto" formControlName="urlFoto">
-          <mat-error *ngIf="(cadastro.touched || cadastro.dirty) && f.urlFoto.errors && f.urlFoto.errors.minlength">O Campo precisa ter no minimo 10 caracteres!</mat-error>
+          <mat-error *ngIf="(cadastro.touched || cadastro.dirty) && f.urlFoto.errors?.minlength">O Campo precisa ter no minimo 10 caracteres!</mat-error>
         </mat-form-field>
         <mat-form-field class="full-width">
           <input matInput
@@ -19,7 +19,7 @@
             [matDatepicker]="picker" placeholder="Data de Lançamento *" name="dtLancamento"
             formControlName="dtLancamento"
             (click)="picker.open()">
-            <mat-error *ngIf="(cadastro.touched || cadastro.dirty) && f.dtLancamento.errors && f.dtLancamento.errors.required">Campo Obrigatório!</mat-error>
+            <mat-error *ngIf="(cadastro.touched || cadastro.dirty) && f.dtLancamento.errors?.required">Campo Obrigatório!</mat-error>
           <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
           <mat-datepicker #picker></mat-datepicker>
         </mat-form-field>
@@ -29,13 +29,13 @@
         <mat-form-field class="full-width">
           <input matInput placeholder="Nota IMDb *" type="number" min="0" max="10" step="0.1" name="nota"
             formControlName="nota">
-          <mat-error *ngIf="(cadastro.touched || cadastro.dirty) && f.nota.errors && f.nota.errors.required">Campo Obrigatório!</mat-error>
-          <mat-error *ngIf="(cadastro.touched || cadastro.dirty) && f.nota.errors && f.nota.errors.min">O Campo precisa ter no minimo o valor 0!</mat-error>
-          <mat-error *ngIf="(cadastro.touched || cadastro.dirty) && f.nota.errors && f.nota.errors.max">O Campo pode ter no maximo o valor 10!</mat-error>
+          <mat-error *ngIf="(cadastro.touched || cadastro.dirty) && f.nota.errors?.required">Campo Obrigatório!</mat-error>
+          <mat-error *ngIf="(cadastro.touched || cadastro.dirty) && f.nota.errors?.min">O Campo precisa ter no minimo o valor 0!</mat-error>
+          <mat-error *ngIf="(cadastro.touched || cadastro.dirty) && f.nota.errors?.max">O Campo pode ter no maximo o valor 10!</mat-error>
         </mat-form-field>
         <mat-form-field class="full-width">
           <input matInput placeholder="Link IMDb" name="urlIMDB" formControlName="urlIMDB">
-          <mat-error *ngIf="(cadastro.touched || cadastro.dirty) && f.urlIMDB.errors && f.urlIMDB.errors.minlength">O Campo precisa ter no minimo 10 caracteres!</mat-error>
+          <mat-error *ngIf="(cadastro.touched || cadastro.dirty) && f.urlIMDB.errors?.minlength">O Campo precisa ter no minimo 10 caracteres!</mat-error>
         </mat-form-field>
         <mat-form-field class="full-width">
           <mat-select placeholder="Gênero *" formControlName="genero">
@@ -45,7 +45,7 @@
             <mat-option value="Romance">Romance</mat-option>
             <mat-option value="Terror">Terror</mat-option>
           </mat-select>
-          <mat-error *ngIf="(cadastro.touched || cadastro.dirty) && f.genero.errors && f.genero.errors.required">Campo Obrigatório!</mat-error>
+          <mat-error *ngIf="(cadastro.touched || cadastro.dirty) && f.genero.errors?.required">Campo Obrigatório!</mat-error>
         </mat-form-field>
       </mat-card-content>
       <mat-card-actions>
