--- a/Curses/TecnicasAvancadasAngular8/curso-angular-estrutura-inicial/src/app/filmes/cadastro-filmes/cadastro-filmes.component.html
+++ b/Curses/TecnicasAvancadasAngular8/curso-angular-estrutura-inicial/src/app/filmes/cadastro-filmes/cadastro-filmes.component.html
@@ -3,16 +3,8 @@
   <mat-card class="center width50">
     <form [formGroup]="cadastro" (ngSubmit)="salvar()" (ngReset)="reiniciarForm()">
       <mat-card-content>
-        <mat-form-field class="full-width">
-          <input matInput placeholder="Título *" name="titulo" formControlName="titulo">
-          <mat-error *ngIf="validarCamposService.hasErrorValidar(f.titulo, 'required')">Campo Obrigatório!</mat-error>
-          <mat-error *ngIf="validarCamposService.hasErrorValidar(f.titulo, 'minlength')">O Campo precisa ter no minimo 2 caracteres!</mat-error>
-          <mat-error *ngIf="validarCamposService.hasErrorValidar(f.titulo, 'maxlength')">O Campo pode ter no maximo 256 caracteres!</mat-error>
-        </mat-form-field>
-        <mat-form-field class="full-width">
-          <input matInput placeholder="Link Foto" name="urlFoto" formControlName="urlFoto">
-          <mat-error *ngIf="validarCamposService.hasErrorValidar(f.urlFoto, 'minlength')">O Campo precisa ter no minimo 10 caracteres!</mat-error>
-        </mat-form-field>
+        <input-text titulo="Titulo *" controlName="titulo" [formGroup]="cadastro"></input-text>
+        <input-text titulo="Link Foto" controlName="urlFoto" [formGroup]="cadastro"></input-text>
         <mat-form-field class="full-width">
           <input matInput
             readonly
@@ -23,9 +15,11 @@
           <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
           <mat-datepicker #picker></mat-datepicker>
         </mat-form-field>
-        <mat-form-field class="full-width">
-          <textarea matInput placeholder="Descrição" name="descricao" formControlName="descricao"></textarea>
-        </mat-form-field>
+        <input-textarea
+            titulo="Descrição"
+            controlName="descricao"
+            [formGroup]="cadastro">
+        </input-textarea>
         <mat-form-field class="full-width">
           <input matInput placeholder="Nota IMDb *" type="number" min="0" max="10" step="0.1" name="nota"
             formControlName="nota">
@@ -33,10 +27,7 @@
           <mat-error *ngIf="validarCamposService.hasErrorValidar(f.nota,'min')">O Campo precisa ter no minimo o valor 0!</mat-error>
           <mat-error *ngIf="validarCamposService.hasErrorValidar(f.nota,'max')">O Campo pode ter no maximo o valor 10!</mat-error>
         </mat-form-field>
-        <mat-form-field class="full-width">
-          <input matInput placeholder="Link IMDb" name="urlIMDB" formControlName="urlIMDB">
-          <mat-error *ngIf="validarCamposService.hasErrorValidar(f.urlIMDB, 'minlength')">O Campo precisa ter no minimo 10 caracteres!</mat-error>
-        </mat-form-field>
+        <input-text titulo="Link IMDb" controlName="urlIMDB" [formGroup]="cadastro"></input-text>
         <mat-form-field class="full-width">
           <mat-select placeholder="Gênero *" formControlName="genero">
             <mat-option value="Ação">Açao</mat-option>
