--- a/Curses/TecnicasAvancadasAngular8/curso-angular-estrutura-inicial/src/app/shared/components/campos/input-text/input-text.component.html
+++ b/Curses/TecnicasAvancadasAngular8/curso-angular-estrutura-inicial/src/app/shared/components/campos/input-text/input-text.component.html
@@ -5,7 +5,11 @@
            [name]="controlName"
            [formControlName]="controlName">
     <mat-error *ngIf="validarCamposService.hasErrorValidar(formControl, 'required')">Campo Obrigatório!</mat-error>
-    <mat-error *ngIf="validarCamposService.hasErrorValidar(formControl, 'minlength')">O Campo precisa ter no minimo 2 caracteres!</mat-error>
-    <mat-error *ngIf="validarCamposService.hasErrorValidar(formControl, 'maxlength')">O Campo pode ter no maximo 256 caracteres!</mat-error>
+    <mat-error *ngIf="validarCamposService.hasErrorValidar(formControl, 'minlength')">
+      O Campo precisa ter no minimo {{validarCamposService.lengthValidar(formControl,'minlength')}} caracteres!
+    </mat-error>
+    <mat-error *ngIf="validarCamposService.hasErrorValidar(formControl, 'maxlength')">
+      O Campo pode ter no maximo {{validarCamposService.lengthValidar(formControl,'maxlength')}} caracteres!
+    </mat-error>
   </mat-form-field>
 </div>
