--- a/Projects/ng-spring-blog-frontend/src/app/header/header.component.html
+++ b/Projects/ng-spring-blog-frontend/src/app/header/header.component.html
@@ -6,7 +6,7 @@
       </div>
       <div class="col-md-6"> <!--Login and Register-->
         <a href="" class="login btn btn-primary">Login</a>
-        <a href="" class="register btn btn-primary">Register</a>
+        <a href="/register" class="register btn btn-primary">Register</a>
       </div>
     </div>
   </div>
