--- a/Curses/TecnicasAvancadasAngular8/curso-angular-estrutura-inicial/src/app/filmes/cadastro-filmes/cadastro-filmes.component.html
+++ b/Curses/TecnicasAvancadasAngular8/curso-angular-estrutura-inicial/src/app/filmes/cadastro-filmes/cadastro-filmes.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar class="app-title">Cadastrar Filme</mat-toolbar>
 <div class="main-div">
   <mat-card class="center width50">
-    <form [formGroup]="cadastro" (ngSubmit)="salvar()" (ngReset)="reiniciarForm()">
+    <form autocomplete="off" novalidate [formGroup]="cadastro" (ngSubmit)="salvar()" (ngReset)="reiniciarForm()">
       <mat-card-content>
         <input-text titulo="Titulo *" controlName="titulo" [formGroup]="cadastro"></input-text>
         <input-text titulo="Link Foto" controlName="urlFoto" [formGroup]="cadastro"></input-text>
@@ -9,7 +9,7 @@
         <input-textarea titulo="Descrição" controlName="descricao" [formGroup]="cadastro"></input-textarea>
         <input-number titulo="Nota IMDb*" controlName="nota" step="0.1" [formGroup]="cadastro"></input-number>
         <input-text titulo="Link IMDb" controlName="urlIMDB" [formGroup]="cadastro"></input-text>
-        <input-select titulo="Gênero" controlName="genero" [formGroup]="cadastro"></input-select>
+        <input-select titulo="Gênero *" [opcoes]="generos" controlName="genero" [formGroup]="cadastro"></input-select>
       </mat-card-content>
       <mat-card-actions>
         <button type="submit" color="accent" mat-raised-button>Salvar</button>
