--- a/Curses/TecnicasAvancadasAngular8/curso-angular-estrutura-inicial/src/app/shared/components/campos/input-select/input-select.component.html
+++ b/Curses/TecnicasAvancadasAngular8/curso-angular-estrutura-inicial/src/app/shared/components/campos/input-select/input-select.component.html
@@ -3,11 +3,8 @@
     <mat-select
       [placeholder]="titulo"
       [formControlName]="controlName">
-      <mat-option value="Ação">Açao</mat-option>
-      <mat-option value="Aventura">Aventura</mat-option>
-      <mat-option value=">Ficção Científica">Ficção Científica</mat-option>
-      <mat-option value="Romance">Romance</mat-option>
-      <mat-option value="Terror">Terror</mat-option>
+      <mat-option *ngFor="let opcao of opcoes" [value]="opcao">{{ opcao }}</mat-option>
+
     </mat-select>
     <mat-error *ngIf="validarCamposService.hasErrorValidar(formControl, 'required')">Campo Obrigatório!</mat-error>
   </mat-form-field>
