--- a/Projects/ng-spring-blog-frontend/src/app/header/header.component.html
+++ b/Projects/ng-spring-blog-frontend/src/app/header/header.component.html
@@ -5,7 +5,7 @@
         <h1> <a href="" class="title">Spring Blog</a></h1>
       </div>
       <div class="col-md-6"> <!--Login and Register-->
-        <a href="" class="login btn btn-primary">Login</a>
+        <a href="/login" class="login btn btn-primary">Login</a>
         <a href="/register" class="register btn btn-primary">Register</a>
       </div>
     </div>
