add post and interceptor http for add token

--- a/Projects/ng-spring-blog-frontend/src/app/header/header.component.css
+++ b/Projects/ng-spring-blog-frontend/src/app/header/header.component.css
@@ -14,3 +14,10 @@
   color: aliceblue;
   padding-top: 10px;
 }
+
+.new-post {
+  float: right;
+  color: aliceblue;
+  padding-top: 10px;
+  text-decoration: none;
+}
