--- a/Projects/ng-spring-blog-frontend/src/app/header/header.component.css
+++ b/Projects/ng-spring-blog-frontend/src/app/header/header.component.css
@@ -15,9 +15,14 @@
   padding-top: 10px;
 }
 
-.new-post {
+.logout, .new-post {
   float: right;
   color: aliceblue;
   padding-top: 10px;
+  text-decoration: none;
+}
+
+.logout:hover, .new-post:hover {
+  color: aliceblue;
   text-decoration: none;
 }
