--- a/Projects/ng-spring-blog-frontend/src/app/header/header.component.html
+++ b/Projects/ng-spring-blog-frontend/src/app/header/header.component.html
@@ -1,16 +1,18 @@
 <div class="header">
   <div class="container">
     <div class="row">
-      <div class="col-md-6"> <!--Title-->
+      <div class="col-md-6">
         <h1> <a href="" class="title">Spring Blog</a></h1>
       </div>
       <div class="col-md-3" *ngIf="this.authService.isAuthentication()">
         <a href="/add-post" class="new-post">Add Post</a>
+        <button class="logout btn btn-default" (click)="logout()">Logout</button>
       </div>
-      <div class="col-md-3"> <!--Login and Register-->
+      <div class="col-md-3" *ngIf="!this.authService.isAuthentication()"> 
         <a href="/login" class="login btn btn-primary">Login</a>
         <a href="/register" class="register btn btn-primary">Register</a>
       </div>
     </div>
   </div>
 </div>
+ 
